--- a/mysql/kubernetes/vitess_cluster_config.yaml
+++ b/mysql/kubernetes/vitess_cluster_config.yaml
@@ -9,3 +9,8 @@ data:
       "Beijing": 1,
       "Hong Kong": 200
     }
+  categories.json: |
+    {
+      "science": 1,
+      "technology": 200 
+    }
