TCP ingress route for Vtctld Client

--- a/mysql/kubernetes/traefik/traefik_deployment.yaml
+++ b/mysql/kubernetes/traefik/traefik_deployment.yaml
@@ -33,6 +33,7 @@ spec:
           args:
             - --providers.kubernetescrd
             - --entrypoints.web.address=:80
+            - --entrypoints.grpc.address=:8000
             - --api.insecure
 ---
 apiVersion: v1
