--- a/mysql/kubernetes/traefik/vitess/vitess_vtctld_client_ingress_route.yaml
+++ b/mysql/kubernetes/traefik/vitess/vitess_vtctld_client_ingress_route.yaml
@@ -1,24 +1,13 @@
 apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
+kind: IngressRouteTCP
 metadata:
   name: vtctld-client
 spec:
   entryPoints:
-    - web
+    - grpc
   routes:
     - kind: Rule
-      match: Host(`tagenal`) && PathPrefix(`/vtctldclient`)
+      match: HostSNI(`*`)
       services:
         - name: vitess-vtctld-047eb1a6
           port: 15999
-      middlewares:
-        - name: vtctld-client-stripprefix
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: vtctld-client-stripprefix
-spec:
-  stripPrefix:
-    prefixes:
-      - /vtctldclient
