--- a/mysql/Makefile
+++ b/mysql/Makefile
@@ -66,7 +66,7 @@ list_vtctld:
 	kubectl get pods --selector="planetscale.com/component=vtctld" -o custom-columns=":metadata.name"
 
 start_minikube:
-	minikube start --kubernetes-version=v1.19.2 --cpus=14 --memory=12000 --disk-size=80g --extra-config=kubelet.authentication-token-webhook=true --extra-config=kubelet.authorization-mode=Webhook --extra-config=scheduler.address=0.0.0.0 --extra-config=controller-manager.address=0.0.0.0
+	minikube start --driver=hyperkit --kubernetes-version=v1.19.2 --cpus=14 --memory=12000 --disk-size=80g --extra-config=kubelet.authentication-token-webhook=true --extra-config=kubelet.authorization-mode=Webhook --extra-config=scheduler.address=0.0.0.0 --extra-config=controller-manager.address=0.0.0.0
 	minikube addons disable metrics-server
 
 start_minikube_dashboard:
@@ -91,6 +91,7 @@ init_unsharded_database:
 	$(INIT_USERS_VSCHEMA)
 	$(INIT_ARTICLES_TABLES)
 	$(INIT_ARTICLES_VSCHEMA)
+
 init_config_increment_sequence:
 	$(SHARD_INIT_CONFIG_SEQUENCES_SQL)
 	$(SHARD_INIT_CONFIG_SEQUENCES_VSCHEMA)
