--- a/kubernetes/traefik/traefik_deployment.yaml
+++ b/kubernetes/traefik/traefik_deployment.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: traefik-ingress-controller
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -25,7 +30,7 @@ spec:
         - key: node-role.kubernetes.io/master
           effect: NoSchedule
       containers:
-        - image: traefik:v2.1.1
+        - image: traefik:v2.3.2
           name: traefik-ingress-lb
           imagePullPolicy: Always
           resources:
@@ -62,6 +67,7 @@ metadata:
     k8s-app: traefik-ingress-lb
     app: traefik
 spec:
+  type: LoadBalancer
   selector:
     k8s-app: traefik-ingress-lb
   ports:
