--- a/kubernetes/traefik/traefik_rbac.yaml
+++ b/kubernetes/traefik/traefik_rbac.yaml
@@ -16,8 +16,10 @@ rules:
       - watch
   - apiGroups:
       - extensions
+      - networking.k8s.io
     resources:
       - ingresses
+      - ingressclasses
     verbs:
       - get
       - list
@@ -35,7 +37,9 @@ rules:
       - ingressroutes
       - traefikservices
       - ingressroutetcps
+      - ingressrouteudps
       - tlsoptions
+      - tlsstores
     verbs:
       - get
       - list
@@ -55,10 +59,3 @@ subjects:
   - kind: ServiceAccount
     name: traefik-ingress-controller
     namespace: default
-
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: traefik-ingress-controller
-  namespace: default
