--- a/kubernetes/traefik/vitess/vitess_vtctld_ingress_route.yaml
+++ b/kubernetes/traefik/vitess/vitess_vtctld_ingress_route.yaml
@@ -2,6 +2,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: vtctld-web
+  namespace: vitess
 spec:
   entryPoints:
     - web
@@ -9,15 +10,18 @@ spec:
     - kind: Rule
       match: Host(`tagenal`) && PathPrefix(`/vtctld`)
       services:
-        - name: vitess-vtctld-047eb1a6
+        - namespace: vitess
+          name: vitess-vtctld-047eb1a6
           port: 15000
       middlewares:
-        - name: vtctld-web-stripprefix
+        - namespace: vitess
+          name: vtctld-web-stripprefix
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: vtctld-web-stripprefix
+  namespace: vitess
 spec:
   stripPrefix:
     prefixes:
