--- a/kubernetes/vitess_cluster_config.yaml
+++ b/kubernetes/vitess_cluster_config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: vitess-cluster-config-sharding
-  namespace: default
+  namespace: vitess
 data:
   countries.json: |
     {
