--- a/kubernetes/traefik/vitess/vitess_vtctld_client_ingress_route.yaml
+++ b/kubernetes/traefik/vitess/vitess_vtctld_client_ingress_route.yaml
@@ -2,6 +2,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRouteTCP
 metadata:
   name: vtctld-client
+  namespace: vitess
 spec:
   entryPoints:
     - grpc
@@ -9,5 +10,6 @@ spec:
     - kind: Rule
       match: HostSNI(`*`)
       services:
-        - name: vitess-vtctld-047eb1a6
+        - namespace: vitess
+          name: vitess-vtctld-047eb1a6
           port: 15999
