--- a/kubernetes/vitess_cluster_secret.yaml
+++ b/kubernetes/vitess_cluster_secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: vitess-cluster-secret
+  namespace: vitess
 type: Opaque
 stringData:
   users.json: |
