--- a/kubernetes/api/users/users_api_server.yaml
+++ b/kubernetes/api/users/users_api_server.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: users-api-deployment
   labels:
+    api: users
     app: users-api
 spec:
   selector:
@@ -16,22 +17,31 @@ spec:
     spec:
       containers:
         - name: users-api-server
-          image: frouioui/tagenal-users-service:v1.0
+          image: frouioui/tagenal-users-service:latest
           resources:
             limits:
               cpu: 50m
               memory: 128Mi
           ports:
-            - name: users-service
+            - name: grpc
+              containerPort: 9090
+            - name: http
               containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: users-service
+  name: users-api-service
+  labels:
+    api: users
 spec:
+  type: LoadBalancer
   selector:
     app: users-api
   ports:
+    - port: 9090
+      targetPort: 9090
+      name: grpc
     - port: 8080
-      targetPort: users-service
+      targetPort: 8080
+      name: http
