--- a/kubernetes/api/users/users_api_server.yaml
+++ b/kubernetes/api/users/users_api_server.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: users-api-deployment
+  name: users-api
   labels:
     api: users
     app: users-api
@@ -19,14 +19,17 @@ spec:
         - name: users-api-server
           image: frouioui/tagenal-users-service:latest
           resources:
-            limits:
-              cpu: 50m
+            requests:
+              cpu: 100m
               memory: 128Mi
+            limits:
+              cpu: 100m
+              memory: 256Mi
           ports:
             - name: grpc
               containerPort: 9090
             - name: http
-              containerPort: 8080
+              containerPort: 10000
 ---
 apiVersion: v1
 kind: Service
@@ -35,13 +38,13 @@ metadata:
   labels:
     api: users
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: users-api
   ports:
     - port: 9090
       targetPort: 9090
       name: grpc
-    - port: 8080
-      targetPort: 8080
+    - port: 10000
+      targetPort: 10000
       name: http
