--- a/kubernetes/traefik/traefik_deployment.yaml
+++ b/kubernetes/traefik/traefik_deployment.yaml
@@ -52,11 +52,13 @@ spec:
             - --metrics.prometheus.buckets=0.100000, 0.300000, 1.200000, 5.000000
           ports:
             - name: web
-              containerPort: 8000
+              containerPort: 80
             - name: metrics
               containerPort: 8082
             - name: admin
               containerPort: 8080
+            - name: grpc
+              containerPort: 8000
 
 ---
 apiVersion: v1
@@ -80,3 +82,6 @@ spec:
     - port: 8082
       targetPort: 8082
       name: metrics
+    - port: 8000
+      targetPort: 8000
+      name: grpc
