modified dockerfile of users api

--- a/api/users/Makefile
+++ b/api/users/Makefile
@@ -16,4 +16,5 @@ protobuild:
 	protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./pb/users.proto
 
 deps:
+	go get -d -v ./...
 	go get -d -v google.golang.org/grpc/...
