Addition of articles api protobuf files

--- a/api/articles/Dockerfile
+++ b/api/articles/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang:1.15.5 AS builder
 WORKDIR /go/src/github.com/frouioui/tagenal/api/articles
 COPY go.mod go.sum ./
+COPY pb/go.mod pb/go.sum ./pb/
 RUN go mod download
 COPY . .
 RUN GO111MODULE=on CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
