--- a/kubernetes/init_cluster_vitess.yaml
+++ b/kubernetes/init_cluster_vitess.yaml
@@ -5,12 +5,12 @@ metadata:
   namespace: vitess
 spec:
   images:
-    vtctld: vitess/lite:v6.0.20-20200429
-    vtgate: vitess/lite:v6.0.20-20200429
-    vttablet: vitess/lite:v6.0.20-20200429
-    vtbackup: vitess/lite:v6.0.20-20200429
+    vtctld: vitess/lite:v8.0.0
+    vtgate: vitess/lite:v8.0.0
+    vttablet: vitess/lite:v8.0.0
+    vtbackup: vitess/lite:v8.0.0
     mysqld:
-      mysql56Compatible: vitess/lite:v6.0.20-20200429
+      mysql56Compatible: vitess/lite:v8.0.0
     mysqldExporter: prom/mysqld-exporter:v0.11.0
   cells:
     - name: zone1
