--- a/kubernetes/init_cluster_vitess_sharded_final_jaeger.yaml
+++ b/kubernetes/init_cluster_vitess_sharded_final_jaeger.yaml
@@ -21,6 +21,10 @@ spec:
               name: vitess-cluster-secret
               key: users.json
         replicas: 1
+        extraFlags:
+          tracer: opentracing-jaeger
+          jaeger-agent-host: jaeger-prod-agent.observability:6831
+          tracing-sampling-rate: "1.0" 
         resources:
           requests:
             cpu: 100m
@@ -43,6 +47,9 @@ spec:
       - zone1
     extraFlags:
       security_policy: read-only
+      tracer: opentracing-jaeger
+      jaeger-agent-host: jaeger-prod-agent.observability:6831
+      tracing-sampling-rate: "0.0" 
     replicas: 1
     resources:
       limits:
@@ -80,6 +87,9 @@ spec:
                   vttablet:
                     extraFlags:
                       db_charset: utf8mb4
+                      tracer: opentracing-jaeger
+                      jaeger-agent-host: jaeger-prod-agent.observability:6831
+                      tracing-sampling-rate: "1.0" 
                     resources:
                       requests:
                         cpu: 100m
@@ -121,6 +131,9 @@ spec:
                   vttablet:
                     extraFlags:
                       db_charset: utf8mb4
+                      tracer: opentracing-jaeger
+                      jaeger-agent-host: jaeger-prod-agent.observability:6831
+                      tracing-sampling-rate: "0.0" 
                     resources:
                       requests:
                         cpu: 100m
@@ -162,6 +175,9 @@ spec:
                   vttablet:
                     extraFlags:
                       db_charset: utf8mb4
+                      tracer: opentracing-jaeger
+                      jaeger-agent-host: jaeger-prod-agent.observability:6831
+                      tracing-sampling-rate: "0.0" 
                     resources:
                       requests:
                         cpu: 100m
