--- a/kubernetes/jaeger/operator.yaml
+++ b/kubernetes/jaeger/operator.yaml
@@ -29,7 +29,10 @@ spec:
           args: ["start", "--log-level=debug"]
           imagePullPolicy: Always
           env:
-          - name: WATCH_NAMESPACE 
+          - name: WATCH_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
           - name: POD_NAME
             valueFrom:
               fieldRef:
