fixed couple issues with jaeger and its permissions

--- a/kubernetes/jaeger/operator.yaml
+++ b/kubernetes/jaeger/operator.yaml
@@ -30,9 +30,7 @@ spec:
           imagePullPolicy: Always
           env:
           - name: WATCH_NAMESPACE
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.namespace
+            value: default,vitess,observability
           - name: POD_NAME
             valueFrom:
               fieldRef:
