--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ jobs:
   include:
     - stage: test build
       install:
-        - cd api/users ; go get -d -v ./...
-        - cd api/articles ; go get -d -v ./...
-        - cd frontend ; go get -d -v ./...
+        - cd api/users && go get -d -v ./... && cd ..
+        - cd api/articles && go get -d -v ./... && cd ..
+        - cd frontend && go get -d -v ./... && cd ..
         - go get -d -v google.golang.org/grpc/...
       script:
-        - make -C ./api/articles build
-        - make -C ./api/users build
-        - make -C ./api/users test
-        - make -C ./api/frontend build
+        - make -C api/articles build
+        - make -C api/users build
+        - make -C api/users test
+        - make -C api/frontend build
       
