Modified install and frontend build configuration in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ jobs:
   include:
     - stage: test build
       install:
-        - cd api/users && go get -d -v ./... && cd ./../..
-        - cd api/articles && go get -d -v ./... && cd ./../..
-        - cd frontend && go get -d -v ./... && cd ..
+        - make -C api/articles deps
+        - make -C api/users deps
+        - make -C frontend deps
         - go get -d -v google.golang.org/grpc/...
       script:
         - make -C api/articles build
         - make -C api/users build
         - make -C api/users test
-        - make -C api/frontend build
+        - make -C frontend build
       
