--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -8,5 +8,11 @@ dockerpush:
 dockerbuild:
 	docker build . -t frouioui/tagenal-frontend-service:latest
 
+build:
+	go build main.go
+
+clean:
+	go clean
+
 deps:
 	go get -d -v ./...
