--- a/kubernetes/redis/redis.yaml
+++ b/kubernetes/redis/redis.yaml
@@ -1,7 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name:  redis
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-master
+  namespace: redis
   labels:
     app: redis
 spec:
@@ -13,18 +19,19 @@ spec:
   replicas: 1
   template:
     metadata:
+      namespace: redis
       labels:
         app: redis
         role: master
         tier: backend
     spec:
       containers:
-      - name: redis-master
-        image: redis
+      - name: master
+        image: k8s.gcr.io/redis:e2e
         resources:
           requests:
             cpu: 100m
-            memory: 128Mi
+            memory: 100Mi
         ports:
         - containerPort: 6379
 ---        
@@ -32,15 +39,69 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-master
+  namespace: redis
   labels:
     app: redis
     role: master
     tier: backend
 spec:
   ports:
-  - port: 6379 
+  - name: redis
+    port: 6379
     targetPort: 6379
   selector:
     app: redis
     role: master
+    tier: backend
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: redis-slave
+  namespace: redis
+  labels:
+    app: redis
+spec:
+  selector:
+    matchLabels:
+      app: redis
+      role: slave
+      tier: backend
+  replicas: 2
+  template:
+    metadata:
+      namespace: redis
+      labels:
+        app: redis
+        role: slave
+        tier: backend
+    spec:
+      containers:
+      - name: slave
+        image: gcr.io/google_samples/gb-redisslave:v3
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+        env:
+        - name: GET_HOSTS_FROM
+          value: dns
+        ports:
+        - containerPort: 6379
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-slave
+  namespace: redis
+  labels:
+    app: redis
+    role: slave
+    tier: backend
+spec:
+  ports:
+  - port: 6379
+  selector:
+    app: redis
+    role: slave
     tier: backend
