--- a/kubernetes/api/users/users_api_server.yaml
+++ b/kubernetes/api/users/users_api_server.yaml
@@ -38,6 +38,10 @@ spec:
           env:
             - name: JAEGER_SERVICE_NAME
               value: "api-users"
+            - name: REDIS_MASTER_HOSTNAME
+              value: "redis-cluster.redis"
+            - name: REDIS_MASTER_PORT
+              value: "6379"
 ---
 apiVersion: v1
 kind: Service
